[FAN-378] Fix the explorer address in NFT detail info

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -140,7 +140,7 @@
     "info": {
       "date": "{value, date, medium}",
       "time": "at {value, time, short}",
-      "view-scan": "View on BscScan"
+      "view-scan": "View on {name}"
     },
     "dialog": {
       "input-info": "Your bid must be {value} {currency} higher than the current top bid.",
