complate add select chain

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -43,6 +43,13 @@
       "items": "Items",
       "brands": "Collections",
       "users": "Users"
+    },
+    "select-chain": {
+      "title": "Select network",
+      "eth": "Ethereum Mainnet",
+      "bnb": "Binance Smart Chain",
+      "heco": "HECO Chain",
+      "heco-2": "Huobi Wallet"
     }
   },
   "language": {
