--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -38,6 +38,13 @@
       "items": "商品",
       "brands": "品牌",
       "users": "用户"
+    },
+    "select-chain": {
+      "title": "选择网络",
+      "eth": "以太坊主网",
+      "bnb": "币安智能链",
+      "heco": "火币生态链",
+      "heco-2": "火币钱包"
     }
   },
   "language": {
