--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -371,7 +371,7 @@
   },
   "change-wallet": {
     "title": "Wrong network",
-    "description": "Change network to Etherium Mainnet, Binance Smart Chain or Heco",
+    "description": "Change network to Etherium Mainnet, Binance Smart Chain or Heco or Matic",
     "submit": "Change network",
     "network-change-error": "Can't setup the BSC network on metamask because provider is undefined."
   },
