[FAN-361-201] Correct English auction price error

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -291,7 +291,9 @@
       "duration": "Auction will be completed in this time"
     },
     "error": {
-      "wrong-direct-reserve-bid-amount": "Make sure Minimum bid ≤ Reserve price < Direct purchase price"
+      "wrong-direct-reserve-bid-amount": "Make sure Minimum bid ≤ Reserve price < Direct purchase price",
+      "wrong-direct-bid-amount": "Make sure Minimum bid < Direct purchase price",
+      "wrong-reserve-bid-amount": "Make sure Minimum bid ≤ Reserve price"
     }
   },
   "profile": {
