--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -21,7 +21,7 @@
       "addNewItem": "Добавить новый товар",
       "createNewItem": "Создать новый товар",
       "createNewcollection": "Создать новую коллекцию",
-      "itemsCount": "{value, plural, =0 {No items} =1 {One item} other {# items}}"
+      "itemsCount": "{value, plural, =0 {Нет NFT} =1 {Один NFT} other {# NFT}}"
     },
     "create": {
       "avatar-accepts": "Поддерживает JPG, PNG, JPEG2000",
@@ -387,7 +387,7 @@
     "$-value": "${value}",
     "BNB-value": "{value, number} BNB",
     "custom-unit": "{value, number} {unit}",
-    "day": "{value, plural, =0 {0 days} =1 {1 day} other {# days}}"
+    "day": "{value, plural, =0 {0 дней} =1 {1 день} (2-4) {# дня} other {# дней}}"
   },
   "upload-file-field": {
     "choose-file": "Выбрать файл",
