--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -387,7 +387,7 @@
     "$-value": "${value}",
     "BNB-value": "{value, number} BNB",
     "custom-unit": "{value, number} {unit}",
-    "day": "{value, plural, =0 {0 дней} one {# день} few {# дня} other {# дней}}"
+    "day": "{value, plural, one {# день} few {# дня} other {# дней}}"
   },
   "upload-file-field": {
     "choose-file": "Выбрать файл",
