--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -351,7 +351,7 @@
       "from": "From",
       "item": "Item",
       "price": "Price",
-      "quantity": "",
+      "quantity": "Quantity",
       "to": "To",
       "transfer": "Transfer"
     },
