--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -207,6 +207,21 @@
       "items": "Товары",
       "placeholder": "Поиск по имени, автору, коллекции ...",
       "users": "Пользователи"
+    },
+    "select-chain": {
+      "bnb": "币安智能链",
+      "eth": "以太坊主网",
+      "heco": "火币生态链",
+      "heco-2": "火币钱包",
+      "title": "选择网络"
+    },
+    "network": {
+      "etherreum": "以太坊主网",
+      "binance": "币安智能链",
+      "rinkby": "Rinkeby 测试链",
+      "heco": "火币生态链",
+      "polygon": "polygon 聚合链",
+      "unknow": "未连接网络"
     }
   },
   "info-prices": {
@@ -235,7 +250,8 @@
   },
   "language": {
     "en-US": "English",
-    "zh-CN": "中文"
+    "zh-CN": "中文",
+    "ru-RU": "Русский"
   },
   "movers": {
     "title": "Набирающие полулярность"
