--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -209,19 +209,19 @@
       "users": "Пользователи"
     },
     "select-chain": {
-      "bnb": "币安智能链",
-      "eth": "以太坊主网",
-      "heco": "火币生态链",
-      "heco-2": "火币钱包",
-      "title": "选择网络"
+      "bnb": "Binance Smart Chain",
+      "eth": "Ethereum Mainnet",
+      "heco": "HECO Chain",
+      "heco-2": "Huobi Wallet",
+      "title": "Select network"
     },
     "network": {
-      "etherreum": "以太坊主网",
-      "binance": "币安智能链",
-      "rinkby": "Rinkeby 测试链",
-      "heco": "火币生态链",
-      "polygon": "polygon 聚合链",
-      "unknow": "未连接网络"
+      "etherreum": "Ethereum",
+      "binance": "Binance Smart Chain",
+      "rinkby":"Rinkeby Test Chain",
+      "heco": "Heco Chain",
+      "polygon": "Matic Chain",
+      "unknow": "Unknown network"
     }
   },
   "info-prices": {
