--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -289,7 +289,7 @@
       "binance": "币安智能链",
       "rinkby":"Rinkeby 测试链",
       "heco": "火币生态链",
-      "polygon": "polygon 聚合链",
+      "polygon": "Polygon 聚合链",
       "unknow": "未连接网络"
     }
   },
