--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -228,6 +228,10 @@
     "tooltip": {
       "bid-warning": "请注意，你在出价后将无法取消。你的出价将是有效的，直到它被出价、被创作者接受或过期"
     },
+    "role":{
+      "seller": "卖家",
+      "minter": "铸造者"
+    },
     "top-bid": "最高出价",
     "your-bid": "您的出价"
   },
