--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -376,7 +376,13 @@
       "directPurchase": "После установки цены прямой покупки покупатели могут пропустить процесс торгов и напрямую купить по этой цене. Цена прямой покупки должна быть больше, чем минимальная ставка и минимальная цена покупки.",
       "duration": "Аукцион завершится в это время",
       "reservePrice": "Резервная цена будет скрыта. Если вы не получите ставок, равных или превышающих ваш резерв, ваш аукцион не будет продан."
-    }
+    },
+    "role": {
+      "seller": "卖家",
+      "minter": "铸造者"
+    },
+    "top-bid": "最高出价",
+    "your-bid": "您的出价"
   },
   "social": {
     "facebook": "Facebook",
