--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -471,6 +471,7 @@
     "instagram": "Instagram",
     "share": "Share",
     "telegram": "Telegram",
+    "website": "Website",
     "title-for-socials": "{title} — {description}",
     "twitter": "Twitter"
   },
