--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -389,6 +389,7 @@
     "instagram": "Instagram",
     "share": "Поделиться",
     "telegram": "Telegram",
+    "website": "Website",
     "title-for-socials": "{title} — {description}",
     "twitter": "Twitter"
   },
