--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -470,6 +470,7 @@
     "instagram": "Instagram",
     "share": "分享",
     "telegram": "Telegram",
+    "website": "Website",
     "title-for-socials": "{title} — {description}",
     "twitter": "Twitter"
   },
